# sgu25-ktpm

./: README.md
.github/workflows/: testing.yml
lab1/: baie  bt1_test.cpp  test_case.ipynb
lab1/bta/: baie  bt1_test.cpp  test_case.ipynb
lab1/btb/: baie  bt1_test.cpp  test_case.ipynb
lab1/btc/: baie  bt1_test.cpp  test_case.ipynb
lab1/btd/: baie  bt1_test.cpp  test_case.ipynb
lab1/practice/: baie  (+13 more)
lab2/: Cau7.sql  abc_database.sql  bai3.drawio  bai3d-e.docx  bai5.drawio  bai6.drawio  bai7.drawio  bai8-4.docx  bai8-5.drawio  cau 8_8,9.docx  lab2_cau2.drawio  lab2_cau4.drawio  lab2_cau8_6.drawio  lab2_cau8_7.drawio
lab3/sgu25_ktpm-lab03_cpp_tests/: CMakeLists.txt  README.md
lab3/sgu25_ktpm-lab03_cpp_tests/.github/workflows/: testing.yml
lab3/sgu25_ktpm-lab03_cpp_tests/src/: algebra_app.cpp  app.cpp  max_app.cpp
lab3/sgu25_ktpm-lab03_cpp_tests/src/lib/: algebra.cpp  algebra.h  calculator.cpp  calculator.h  logger.cpp  logger.h  math_lib.cpp  math_lib.h  noise.h
lab3/sgu25_ktpm-lab03_cpp_tests/tests/: algebra_test.cpp  max_test.cpp
lab3_v2/: Lab3.rar  c4model.drawio  complete_lab3_btmh.docx  deploymentview.drawio  kientruchethong.docx  lab3_bai3.docx
lab4/: ABC Project Test Plan_0.2-template.docx  Test of Understanding Test Plan.docx
lab5/: 6. Test Case Template.xlsx  LeNgocHiep_3122411053_TN.docx  NgoTuanAnh_3122411007_TN.docx  NguyenPhuongVinh_3122411247_TN.docx  System_ Counter Sales.docx  TranHaoDien_3122411042_TN.docx
lab6/: BT06_LyThuyet.docx  Lab6_KiemThuBangQuyetDinh_.docx  Lab6_StateDiagram.docx  State_diagram.drawio
lab7/: Lab7.xlsx
(+9 files in other folders)
